--- a/package.json
+++ b/package.json
@@ -9,25 +9,24 @@
   },
   "dependencies": {
     "@barelyreaper/themer": "^2.0.1",
-    "@dumbjs/persona": "^0.0.3",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
     "@next/mdx": "^14.2.13",
+    "@preachjs/themes": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.17",
     "@types/mdx": "^2.0.13",
-    "adex": "^0.0.18",
+    "adex": "0.0.18",
+    "adex-adapter-node": "^0.0.18",
     "clsx": "^2.1.1",
     "lucide-preact": "^0.484.0",
-    "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
-    "next": "15.1.1",
-    "next-themes": "^0.4.4",
     "preact": "^10.26.4",
     "preact-iso": "^2.9.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@dumbjs/persona": "^0.1.1",
     "@eslint/eslintrc": "^3",
     "@preact/preset-vite": "^2.10.1",
     "@tailwindcss/postcss": "^4.0.0",
