--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   },
   "dependencies": {
     "@barelyreaper/themer": "^2.0.1",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.13",
+    "@mdx-js/preact": "^3.1.0",
     "@preachjs/themes": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@tailwindcss/vite": "^4.0.17",
@@ -28,6 +26,7 @@
   "devDependencies": {
     "@dumbjs/persona": "^0.1.1",
     "@eslint/eslintrc": "^3",
+    "@mdx-js/rollup": "^3.1.0",
     "@preact/preset-vite": "^2.10.1",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20",
@@ -39,5 +38,10 @@
     "typescript": "^5",
     "vite": "^6.2.3"
   },
-  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b"
+  "packageManager": "pnpm@10.5.2+sha512.da9dc28cd3ff40d0592188235ab25d3202add8a207afbedc682220e4a0029ffbff4562102b9e6e46b4e3f9e8bd53e6d05de48544b0c57d4b0179e22c76d1199b",
+  "pnpm": {
+    "patchedDependencies": {
+      "adex": "patches/adex.patch"
+    }
+  }
 }
